[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipinfo-cli"
version = "1.0.0"
description = "🔍 A modern CLI tool for IP address information lookup"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "gitstq", email = "gitstq@users.noreply.github.com"}
]
maintainers = [
    {name = "gitstq", email = "gitstq@users.noreply.github.com"}
]
keywords = [
    "ip",
    "ip-address",
    "geoip",
    "cli",
    "network",
    "lookup",
    "whois",
    "networking",
    "devops",
    "security"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "Typing :: Typed"
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0"
]

[project.scripts]
ipinfo = "ipinfo:main"

[project.urls]
Homepage = "https://github.com/gitstq/ipinfo-cli"
Documentation = "https://github.com/gitstq/ipinfo-cli#readme"
Repository = "https://github.com/gitstq/ipinfo-cli"
Issues = "https://github.com/gitstq/ipinfo-cli/issues"
Changelog = "https://github.com/gitstq/ipinfo-cli/releases"

[tool.setuptools]
py-modules = ["ipinfo"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=ipinfo --cov-report=term-missing"
